--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
                             <h3 class="project-title">XSScanner</h3>
                             <div class="project-links">
                                 <a href="https://github.com/MedusaBest/XSScanner" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-                                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
+                                <a href="https://github.com/MedusaBest/XSScanner" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
                         <p class="project-description">Açık kaynak web uygulama güvenliği test aracı. XSS zafiyetlerini otomatik olarak tespit edebilir.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Python</span>
-                            <span class="tech-tag">Selenium</span>
-                            <span class="tech-tag">BeautifulSoup</span>
+                            <span class="tech-tag">Requests</span>
+                          <!--  <span class="tech-tag">BeautifulSoup</span>-->
                         </div>
                     </div>
 
@@ -208,13 +208,13 @@
                             <h3 class="project-title">Hotmail Checker</h3>
                             <div class="project-links">
                                 <a href="https://github.com/MedusaBest/Fast-Hotmail-Checker" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-                                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
+                                <a href="https://github.com/MedusaBest/Fast-Hotmail-Checker" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
                         <p class="project-description">Hotmail Checker, çoklu hotmail hesaplarının giriş yapıp yapmadığını kontrol eder.</p>
                         <div class="project-tech">
-                            <span class="tech-tag">Markdown</span>
-                            <span class="tech-tag">Bash</span>
+                            <span class="tech-tag">Requests</span>
+                            <span class="tech-tag">BeatifoulSoup</span>
                             <span class="tech-tag">Python</span>
                         </div>
                     </div>
