--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <p class="project-description">Hotmail Checker, çoklu hotmail hesaplarının giriş yapıp yapmadığını kontrol eder.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Requests</span>
-                            <span class="tech-tag">BeatifoulSoup</span>
+                            <span class="tech-tag">Imaplib</span>
                             <span class="tech-tag">Python</span>
                         </div>
                     </div>
