--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
                             </div>
                         </div>
                         <div class="profile-text">
+                            <li><button id="theme-toggle" aria-label="Tema Değiştir">
+                        <i class="fas fa-sun light-icon"></i>
+                        <i class="fas fa-moon dark-icon"></i>
+                    </button></li>
                             <h1>Merhaba, Ben <span class="highlight-text">MedusaBest</span></h1>
                             <h2>Yazılım | Web Geliştirme | Backend</h2>
                             <div class="social-links">
