--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <div class="project-tech">
                             <span class="tech-tag">Python</span>
                             <span class="tech-tag">Requests</span>
-                          <!--  <span class="tech-tag">BeautifulSoup</span>-->
+                       <!--     <span class="tech-tag">BeautifulSoup</span>-->
                         </div>
                     </div>
 
@@ -341,9 +341,9 @@
                                 <p class="typed-animation"><span class="prompt">$</span> echo "Benimle iletişime geçmek ister misiniz?"</p>
                                 <p>Aşağıdaki kanallardan bana ulaşabilirsiniz:</p>
                                 <div class="contact-links">
-                                  <!--  <a href="mailto:info@etikhacker.com" class="contact-link">
+                                  <!--  <a href="mailto:info@example.com" class="contact-link">
                                         <i class="fas fa-envelope"></i>
-                                        <span>info@etikhacker.com</span>
+                                        <span>info@example.com</span>
                                     </a>-->
                                     <a href="https://github.com/MedusaBest" target="_blank" rel="noopener noreferrer" class="contact-link">
                                         <i class="fab fa-github"></i>
