--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MedusaBest</title>
     <meta name="description" content="MedusaBest Biyografi Sitesi">
-    
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Medusa Best",
+  "url": "https://medusabest.github.io",
+  "image": "https://medusabest.github.io/img/profile.jpg",
+  "jobTitle": "Web Geliştirici",
+  "description": "Web geliştirme alanında içerik üreten bağımsız geliştirici.",
+  "sameAs": [
+    "https://github.com/MedusaBest",
+    "https://www.instagram.com/med4saa"
+  ]
+}
+    </script>
     <!-- SEO Meta Etiketleri -->
     <meta name="keywords" content="MedusaBest, MedusaBest bio, MedusaBest biyografi, MedusaBest biyografi sitesi">
     <meta name="author" content="MedusaBest">
