--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   ]
 }
     </script>
+    <meta name="google-site-verification" content="0w8tFYHh_oSZU5oe3PU53cgNfkMggt5iNIkCO2PmzKw" />
     <link rel="icon" type="image/jpeg" href="https://medusabest.github.io/img/profile.jpg">
     <!-- SEO Meta Etiketleri -->
     <meta name="keywords" content="MedusaBest, MedusaBest bio, MedusaBest biyografi, MedusaBest biyografi sitesi">
